Add GET /{id}/stats endpoint
